Fixed most of the layout issues

--- a/src/app/rm-calculator/rm-calculator.css
+++ b/src/app/rm-calculator/rm-calculator.css
@@ -4,16 +4,21 @@
     align-items: center;
 }
 
+/* DATA CONTAINER, OVERALL STRUCTURE */
 .data-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: .75fr repeat(4, 2.375rem) 1fr;
     grid-gap: 1rem;
     width: 22rem;
+    height: 24rem;
 }
 
 .header-container {
     grid-column: span 3; /* Spans all three columns */
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-self: center;
 }
 
 .advanced-settings-list {
@@ -45,23 +50,6 @@
     justify-content: center;
 }
 
-
-
-
-.header-container, 
-.weight-container, 
-.reps-and-intensity-container, 
-.weighted-pull-up-container {
-    margin-bottom: 1rem;
-}
-
-.header-container select {
-    font-size: 1.625rem;
-    font-weight: 700;
-    border: none;
-    padding: .5rem .375rem;
-}
-
 .data-container input {
     color: black;
     font-size: 1rem;
@@ -70,6 +58,13 @@
     line-height: 1.5;
     border-radius: 5px;
     border: 1px solid lightgray;
+}
+
+.header-container select {
+    font-size: 1.625rem;
+    font-weight: 700;
+    border: none;
+    padding: .5rem .375rem;
 }
 
 .weight-units-container .weight-unit {
@@ -121,8 +116,8 @@
     width: 100%;
 }
 
-/* WEIGHTED PULL UP/DIP CONTAINER */
 
+/* WEIGHTED PULL UP/DIP CONTAINER */
 .weighted-pull-up-checkbox-container input {
     margin-right: .25rem;
 }
